--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -18,6 +18,12 @@
       overflow: scroll;
     }
   
+    .empty-message {
+      font-size: 18px;
+      //display: flex;
+      margin: 50px auto;
+    }
+
     button {
       margin-top: auto;
     }
